# rendoo

./: .gitmodules  CMakeLists.txt  README.md  colors.go  face.go  image.go  line.go  main.go  matrix.go  obj.go  triangle.go  vertex.go
include/: main.h  rasterizer.h  scene.h
src/: main.c  rasterizer.c  scene.c
